2006-11-20  Rich Kilmer <rich@infoether.com>
	* lib/rubygems/cmd_manager.rb: Added PristineCommand

	* lib/rubygems/gem_commands.rb: Added PristineCommand to restore
	gems to pristine condition in the event of files begin deleted
	based on the cached .gem file

2006-11-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/*_fetcher.rb: Removed code specific to remote source
	index updating.

	* lib/rubygems/remote_installer.rb (Gem::RemoteInstaller#search):
	Moved to Gem::SourceInfoCache#search

	* lib/rubygems/source_info_cache.rb: Taught to update itself

	* lib/rubygems/source_info_cache_entry.rb: Taught to update itself

	* lib/rubygems/source_index.rb: Taught to update itself from a uri.

2006-11-18  Chad Fowler  <chad@chadfowler.com>

        * lib/rubygems/installer.rb: Applied Kevin Clark's patch to make
        RubyGems recognize mkrf files.

2006-11-17  Eric Hodel  <drbrain@segment7.net>

	* test/test_remote_fetcher.rb:  Don't allow files in Dir.pwd to make
	tests fail.  Spotted by Chad Fowler.

	* lib/rubygems/remote_installer.rb (Gem::RemoteFetcher,
	Gem::CacheFetcher):  Break out of remote_installer.rb into separate
	files.

	* lib/rubygems/remote_installer.rb (Gem::SourceInfoCache,
	Gem::SourceInfoCacheEntry):  Allow requiring just the source cache
	without the remote fetcher.

2006-11-16  Eric Hodel  <drbrain@segment7.net>

	* test/test_local_cache.rb: Moved to better name

	* test/test_gem_source_info_cache.rb: Renamed test methods to match
	implementations.  Sorted test names.

	* lib/rubygems/remote_installer (Gem::SourceInfoCache): cache_data no
	longer resets dirty flag.  Sped up source cache loading.  Exposed
	cache file name in use.
	
2006-11-15  Eric Hodel  <drbrain@segment7.net>

	* test/, lib/: Made files -w clean.

	* test/: Made tests run independently.

	* Rakefile: Tests now run with warnings on.

2006-11-14  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/user_interaction.rb (Gem::StreamUI#progress_reporter):